// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#parse 1`] = `
Object {
  "fonts": Array [],
  "locals": Array [],
  "slots": Array [],
  "views": Array [
    Object {
      "animations": Object {},
      "children": Array [],
      "id": "Main",
      "is": "Main",
      "isAnimated": false,
      "isBasic": true,
      "isCapture": false,
      "isColumn": false,
      "isGroup": true,
      "isList": false,
      "isTable": false,
      "level": 0,
      "loc": Object {
        "end": Object {
          "column": 12,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [],
}
`;

exports[`#parse 2`] = `
Object {
  "fonts": Array [],
  "locals": Array [],
  "slots": Array [],
  "views": Array [
    Object {
      "animations": Object {},
      "children": Array [
        Object {
          "animations": Object {},
          "id": "Text",
          "isAnimated": false,
          "isBasic": true,
          "isCapture": false,
          "isColumn": false,
          "isGroup": false,
          "level": 1,
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 2,
            },
            "start": Object {
              "column": 0,
              "line": 2,
            },
          },
          "name": "Text",
          "properties": Array [],
          "scopes": Array [],
          "type": "Block",
        },
      ],
      "id": "Main",
      "is": "Main",
      "isAnimated": false,
      "isBasic": true,
      "isCapture": false,
      "isColumn": false,
      "isGroup": true,
      "isList": false,
      "isTable": false,
      "level": 0,
      "loc": Object {
        "end": Object {
          "column": 5,
          "line": 2,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [],
}
`;

exports[`#parse 3`] = `
Object {
  "fonts": Array [],
  "locals": Array [],
  "slots": Array [],
  "views": Array [
    Object {
      "animations": Object {},
      "children": Array [
        Object {
          "animations": Object {},
          "id": "Before",
          "is": "Before",
          "isAnimated": false,
          "isBasic": true,
          "isCapture": false,
          "isColumn": false,
          "isGroup": false,
          "level": 1,
          "loc": Object {
            "end": Object {
              "column": 16,
              "line": 3,
            },
            "start": Object {
              "column": 0,
              "line": 2,
            },
          },
          "name": "Text",
          "properties": Array [],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "animations": Object {},
          "children": Array [
            Object {
              "animations": Object {},
              "id": "ImageInside",
              "is": "ImageInside",
              "isAnimated": false,
              "isBasic": true,
              "isCapture": false,
              "isColumn": false,
              "isGroup": false,
              "level": 2,
              "loc": Object {
                "end": Object {
                  "column": 26,
                  "line": 6,
                },
                "start": Object {
                  "column": 0,
                  "line": 4,
                },
              },
              "name": "Image",
              "properties": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 32,
                      "line": 5,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 5,
                    },
                  },
                  "name": "source",
                  "tags": Object {
                    "validSlot": null,
                  },
                  "type": "Property",
                  "value": "https://image.com/file.jpg",
                },
              ],
              "scopes": Array [],
              "type": "Block",
            },
            Object {
              "animations": Object {},
              "children": Array [],
              "id": "VerticalInside",
              "is": "VerticalInside",
              "isAnimated": false,
              "isBasic": true,
              "isCapture": false,
              "isColumn": false,
              "isGroup": true,
              "isList": false,
              "isTable": false,
              "level": 2,
              "loc": Object {
                "end": Object {
                  "column": 11,
                  "line": 7,
                },
                "start": Object {
                  "column": 0,
                  "line": 6,
                },
              },
              "name": "Vertical",
              "properties": Array [],
              "scopes": Array [],
              "type": "Block",
            },
          ],
          "id": "Nested",
          "is": "Nested",
          "isAnimated": false,
          "isBasic": true,
          "isCapture": false,
          "isColumn": false,
          "isGroup": true,
          "isList": false,
          "isTable": false,
          "level": 1,
          "loc": Object {
            "end": Object {
              "column": 11,
              "line": 7,
            },
            "start": Object {
              "column": 0,
              "line": 3,
            },
          },
          "name": "Vertical",
          "properties": Array [],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "animations": Object {},
          "id": "After",
          "is": "After",
          "isAnimated": false,
          "isBasic": true,
          "isCapture": false,
          "isColumn": false,
          "isGroup": false,
          "level": 1,
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 12,
            },
            "start": Object {
              "column": 0,
              "line": 7,
            },
          },
          "name": "Text",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 8,
                },
                "start": Object {
                  "column": 0,
                  "line": 8,
                },
              },
              "name": "text",
              "tags": Object {
                "validSlot": null,
              },
              "type": "Property",
              "value": "after",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 11,
                  "line": 9,
                },
                "start": Object {
                  "column": 0,
                  "line": 9,
                },
              },
              "name": "color",
              "tags": Object {
                "style": true,
                "validSlot": null,
              },
              "type": "Property",
              "value": "purple",
            },
          ],
          "scopes": Array [
            Object {
              "isLocal": false,
              "isSystem": true,
              "name": "when",
              "properties": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 14,
                      "line": 10,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 10,
                    },
                  },
                  "name": "when",
                  "scope": "isHovered",
                  "slotName": "isHovered",
                  "tags": Object {
                    "scope": "<isHovered",
                    "shouldBeSlot": true,
                    "slot": true,
                    "validSlot": true,
                  },
                  "type": "Property",
                  "value": "isHovered",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 8,
                      "line": 11,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 11,
                    },
                  },
                  "name": "color",
                  "scope": "isHovered",
                  "tags": Object {
                    "style": true,
                    "validSlot": null,
                  },
                  "type": "Property",
                  "value": "red",
                },
              ],
              "slotIsNot": false,
              "slotName": "isHovered",
              "value": "isHovered",
            },
          ],
          "type": "Block",
        },
        Object {
          "animations": Object {},
          "children": Array [],
          "id": "Last",
          "is": "Last",
          "isAnimated": false,
          "isBasic": true,
          "isCapture": false,
          "isColumn": false,
          "isGroup": true,
          "isList": false,
          "isTable": false,
          "level": 1,
          "loc": Object {
            "end": Object {
              "column": 23,
              "line": 13,
            },
            "start": Object {
              "column": 0,
              "line": 12,
            },
          },
          "name": "Vertical",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 13,
                },
                "start": Object {
                  "column": 0,
                  "line": 13,
                },
              },
              "name": "backgroundColor",
              "tags": Object {
                "style": true,
                "validSlot": null,
              },
              "type": "Property",
              "value": "blue",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
      ],
      "id": "BlueButton",
      "is": "BlueButton",
      "isAnimated": false,
      "isBasic": true,
      "isCapture": false,
      "isColumn": false,
      "isGroup": true,
      "isList": false,
      "isTable": false,
      "level": 0,
      "loc": Object {
        "end": Object {
          "column": 23,
          "line": 13,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [],
}
`;

exports[`#parse 4`] = `
Object {
  "fonts": Array [],
  "locals": Array [],
  "slots": Array [],
  "views": Array [
    Object {
      "animations": Object {},
      "children": Array [
        Object {
          "animations": Object {},
          "id": "A1",
          "is": "A1",
          "isAnimated": false,
          "isBasic": true,
          "isCapture": false,
          "isColumn": false,
          "isGroup": false,
          "level": 1,
          "loc": Object {
            "end": Object {
              "column": 8,
              "line": 4,
            },
            "start": Object {
              "column": 0,
              "line": 2,
            },
          },
          "name": "Text",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 3,
                },
                "start": Object {
                  "column": 0,
                  "line": 3,
                },
              },
              "name": "color",
              "tags": Object {
                "style": true,
                "validSlot": null,
              },
              "type": "Property",
              "value": "red",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "animations": Object {},
          "id": "A2",
          "is": "A2",
          "isAnimated": false,
          "isBasic": true,
          "isCapture": false,
          "isColumn": false,
          "isGroup": false,
          "level": 1,
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 5,
            },
            "start": Object {
              "column": 0,
              "line": 4,
            },
          },
          "name": "Text",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 10,
                  "line": 5,
                },
                "start": Object {
                  "column": 0,
                  "line": 5,
                },
              },
              "name": "color",
              "tags": Object {
                "style": true,
                "validSlot": null,
              },
              "type": "Property",
              "value": "white",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
      ],
      "id": "A",
      "is": "A",
      "isAnimated": false,
      "isBasic": true,
      "isCapture": false,
      "isColumn": false,
      "isGroup": true,
      "isList": false,
      "isTable": false,
      "level": 0,
      "loc": Object {
        "end": Object {
          "column": 14,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [],
}
`;

exports[`#parse 5`] = `
Object {
  "fonts": Array [],
  "locals": Array [],
  "slots": Array [
    Object {
      "defaultValue": false,
      "name": "backgroundColor",
      "type": "string",
    },
    Object {
      "defaultValue": false,
      "name": "onClick",
      "type": "function",
    },
    Object {
      "defaultValue": "red",
      "name": "color",
      "type": "string",
    },
    Object {
      "defaultValue": 10,
      "name": "marginLeft",
      "type": "number",
    },
    Object {
      "defaultValue": "This is the title",
      "name": "title",
      "type": "string",
    },
    Object {
      "defaultValue": false,
      "name": "onFocus",
      "type": "function",
    },
    Object {
      "defaultValue": false,
      "name": "from",
      "type": "array",
    },
  ],
  "views": Array [
    Object {
      "animations": Object {},
      "children": Array [
        Object {
          "animations": Object {},
          "id": "Title",
          "is": "Title",
          "isAnimated": false,
          "isBasic": true,
          "isCapture": false,
          "isColumn": false,
          "isGroup": false,
          "level": 1,
          "loc": Object {
            "end": Object {
              "column": 8,
              "line": 8,
            },
            "start": Object {
              "column": 0,
              "line": 4,
            },
          },
          "name": "Text",
          "properties": Array [
            Object {
              "defaultValue": "red",
              "loc": Object {
                "end": Object {
                  "column": 10,
                  "line": 5,
                },
                "start": Object {
                  "column": 0,
                  "line": 5,
                },
              },
              "name": "color",
              "slotName": "",
              "tags": Object {
                "slot": true,
                "style": true,
                "validSlot": true,
              },
              "type": "Property",
              "value": "props.color",
            },
            Object {
              "defaultValue": 10,
              "loc": Object {
                "end": Object {
                  "column": 14,
                  "line": 6,
                },
                "start": Object {
                  "column": 0,
                  "line": 6,
                },
              },
              "name": "marginLeft",
              "slotName": "",
              "tags": Object {
                "slot": true,
                "style": true,
                "validSlot": true,
              },
              "type": "Property",
              "value": "props.marginLeft",
            },
            Object {
              "defaultValue": "This is the title",
              "loc": Object {
                "end": Object {
                  "column": 28,
                  "line": 7,
                },
                "start": Object {
                  "column": 0,
                  "line": 7,
                },
              },
              "name": "text",
              "slotName": "title",
              "tags": Object {
                "slot": true,
                "validSlot": true,
              },
              "type": "Property",
              "value": "props.title",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "animations": Object {},
          "id": "Capture",
          "isAnimated": false,
          "isBasic": true,
          "isCapture": true,
          "isColumn": false,
          "isGroup": false,
          "level": 1,
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 11,
            },
            "start": Object {
              "column": 0,
              "line": 8,
            },
          },
          "name": "Capture",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 9,
                },
                "start": Object {
                  "column": 0,
                  "line": 9,
                },
              },
              "name": "type",
              "tags": Object {
                "validSlot": null,
              },
              "type": "Property",
              "value": "text",
            },
            Object {
              "defaultValue": "",
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 10,
                },
                "start": Object {
                  "column": 0,
                  "line": 10,
                },
              },
              "name": "onFocus",
              "slotName": "",
              "tags": Object {
                "shouldBeSlot": true,
                "slot": true,
                "validSlot": true,
              },
              "type": "Property",
              "value": "props.onFocus",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "animations": Object {},
          "children": Array [
            Object {
              "animations": Object {},
              "children": Array [],
              "childrenProxyMap": null,
              "id": "Stuff",
              "isAnimated": false,
              "isBasic": false,
              "isCapture": false,
              "isColumn": false,
              "isGroup": true,
              "isList": false,
              "isTable": false,
              "level": 2,
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 13,
                },
                "start": Object {
                  "column": 0,
                  "line": 13,
                },
              },
              "name": "Stuff",
              "properties": Array [],
              "scopes": Array [],
              "type": "Block",
            },
          ],
          "id": "List",
          "isAnimated": false,
          "isBasic": true,
          "isCapture": false,
          "isColumn": false,
          "isGroup": true,
          "isList": true,
          "isTable": false,
          "level": 1,
          "loc": Object {
            "end": Object {
              "column": 8,
              "line": 13,
            },
            "start": Object {
              "column": 0,
              "line": 11,
            },
          },
          "name": "List",
          "properties": Array [
            Object {
              "defaultValue": "",
              "loc": Object {
                "end": Object {
                  "column": 5,
                  "line": 12,
                },
                "start": Object {
                  "column": 0,
                  "line": 12,
                },
              },
              "name": "from",
              "slotName": "",
              "tags": Object {
                "shouldBeSlot": true,
                "slot": true,
                "validSlot": true,
              },
              "type": "Property",
              "value": "props.from",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
      ],
      "id": "Vertical",
      "isAnimated": false,
      "isBasic": true,
      "isCapture": false,
      "isColumn": false,
      "isGroup": true,
      "isList": false,
      "isTable": false,
      "level": 0,
      "loc": Object {
        "end": Object {
          "column": 8,
          "line": 13,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Vertical",
      "properties": Array [
        Object {
          "defaultValue": false,
          "loc": Object {
            "end": Object {
              "column": 31,
              "line": 2,
            },
            "start": Object {
              "column": 0,
              "line": 2,
            },
          },
          "name": "backgroundColor",
          "slotName": "backgroundColor",
          "tags": Object {
            "slot": true,
            "style": true,
            "validSlot": true,
          },
          "type": "Property",
          "value": "props.backgroundColor",
        },
        Object {
          "defaultValue": "onClick",
          "loc": Object {
            "end": Object {
              "column": 15,
              "line": 3,
            },
            "start": Object {
              "column": 0,
              "line": 3,
            },
          },
          "name": "onClick",
          "slotName": "onClick",
          "tags": Object {
            "shouldBeSlot": true,
            "slot": true,
            "validSlot": true,
          },
          "type": "Property",
          "value": "props.onClick",
        },
      ],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [
    Object {
      "line": "backgroundColor <backgroundColor",
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 2,
        },
        "start": Object {
          "column": 0,
          "line": 2,
        },
      },
      "type": "Add a default value to \\"backgroundColor\\" like: \\"backgroundColor <backgroundColor default value\\"",
    },
  ],
}
`;

exports[`#parse 6`] = `
Object {
  "fonts": Array [],
  "locals": Array [
    "es",
  ],
  "slots": Array [],
  "views": Array [
    Object {
      "animations": Object {},
      "children": Array [
        Object {
          "animations": Object {},
          "id": "Text",
          "isAnimated": false,
          "isBasic": true,
          "isCapture": false,
          "isColumn": false,
          "isGroup": false,
          "level": 1,
          "loc": Object {
            "end": Object {
              "column": 12,
              "line": 5,
            },
            "start": Object {
              "column": 0,
              "line": 2,
            },
          },
          "name": "Text",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 6,
                  "line": 3,
                },
                "start": Object {
                  "column": 0,
                  "line": 3,
                },
              },
              "name": "text",
              "tags": Object {
                "validSlot": null,
              },
              "type": "Property",
              "value": "hi",
            },
          ],
          "scopes": Array [
            Object {
              "isLocal": true,
              "isSystem": false,
              "name": "when",
              "properties": Array [
                Object {
                  "defaultValue": "es",
                  "loc": Object {
                    "end": Object {
                      "column": 7,
                      "line": 4,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 4,
                    },
                  },
                  "name": "when",
                  "scope": "es",
                  "slotName": "es",
                  "tags": Object {
                    "scope": "<es",
                    "shouldBeSlot": true,
                    "slot": true,
                    "validSlot": true,
                  },
                  "type": "Property",
                  "value": "props.es",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 8,
                      "line": 5,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 5,
                    },
                  },
                  "name": "text",
                  "scope": "es",
                  "tags": Object {
                    "validSlot": null,
                  },
                  "type": "Property",
                  "value": "hola",
                },
              ],
              "slotIsNot": false,
              "slotName": "es",
              "value": "es",
            },
          ],
          "type": "Block",
        },
      ],
      "id": "Locals",
      "is": "Locals",
      "isAnimated": false,
      "isBasic": true,
      "isCapture": false,
      "isColumn": false,
      "isGroup": true,
      "isList": false,
      "isTable": false,
      "level": 0,
      "loc": Object {
        "end": Object {
          "column": 12,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [],
}
`;

exports[`#parse 7`] = `
Object {
  "fonts": Array [],
  "locals": Array [],
  "slots": Array [
    Object {
      "defaultValue": false,
      "name": "marginTop",
      "type": "number",
    },
  ],
  "views": Array [
    Object {
      "animations": Object {},
      "children": Array [
        Object {
          "animations": Object {},
          "children": Array [],
          "id": "EmptyWhen",
          "is": "EmptyWhen",
          "isAnimated": false,
          "isBasic": true,
          "isCapture": false,
          "isColumn": false,
          "isGroup": true,
          "isList": false,
          "isTable": false,
          "level": 1,
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 12,
            },
            "start": Object {
              "column": 0,
              "line": 2,
            },
          },
          "name": "Vertical",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 3,
                },
                "start": Object {
                  "column": 0,
                  "line": 3,
                },
              },
              "name": "color",
              "tags": Object {
                "style": true,
                "validSlot": null,
              },
              "type": "Property",
              "value": "blue",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 4,
                },
                "start": Object {
                  "column": 0,
                  "line": 4,
                },
              },
              "name": "height",
              "tags": Object {
                "style": true,
                "validSlot": null,
              },
              "type": "Property",
              "value": 100,
            },
            Object {
              "defaultValue": false,
              "loc": Object {
                "end": Object {
                  "column": 10,
                  "line": 5,
                },
                "start": Object {
                  "column": 0,
                  "line": 5,
                },
              },
              "name": "marginTop",
              "slotName": "",
              "tags": Object {
                "slot": true,
                "style": true,
                "validSlot": true,
              },
              "type": "Property",
              "value": "props.marginTop",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 6,
                },
                "start": Object {
                  "column": 0,
                  "line": 6,
                },
              },
              "name": "border",
              "tags": Object {
                "unsupportedShorthand": true,
                "validSlot": null,
              },
              "type": "Property",
              "value": "1px solid red",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 7,
                },
                "start": Object {
                  "column": 0,
                  "line": 7,
                },
              },
              "name": "height",
              "tags": Object {
                "style": true,
                "validSlot": null,
              },
              "type": "Property",
              "value": 302,
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 9,
                },
                "start": Object {
                  "column": 0,
                  "line": 9,
                },
              },
              "name": "color",
              "tags": Object {
                "style": true,
                "validSlot": null,
              },
              "type": "Property",
              "value": "red",
            },
          ],
          "scopes": Array [
            Object {
              "isLocal": false,
              "isSystem": false,
              "name": "when",
              "properties": Array [
                Object {
                  "defaultValue": "stuff",
                  "loc": Object {
                    "end": Object {
                      "column": 11,
                      "line": 10,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 10,
                    },
                  },
                  "name": "when",
                  "scope": "",
                  "slotName": "",
                  "tags": Object {
                    "scope": "stuff",
                    "shouldBeSlot": true,
                    "slot": true,
                    "validSlot": true,
                  },
                  "type": "Property",
                  "value": "props.when",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 21,
                      "line": 11,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 11,
                    },
                  },
                  "name": "backgroundColor",
                  "scope": "",
                  "tags": Object {
                    "style": true,
                    "validSlot": null,
                  },
                  "type": "Property",
                  "value": "purple",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 10,
                      "line": 12,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 12,
                    },
                  },
                  "name": "color",
                  "scope": "",
                  "tags": Object {
                    "style": true,
                    "validSlot": null,
                  },
                  "type": "Property",
                  "value": "green",
                },
              ],
              "slotIsNot": false,
              "slotName": "",
              "value": "props.when",
            },
          ],
          "type": "Block",
        },
      ],
      "id": "Warning",
      "is": "Warning",
      "isAnimated": false,
      "isBasic": true,
      "isCapture": false,
      "isColumn": false,
      "isGroup": true,
      "isList": false,
      "isTable": false,
      "level": 0,
      "loc": Object {
        "end": Object {
          "column": 14,
          "line": 12,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [
    Object {
      "line": "marginTop <",
      "loc": Object {
        "end": Object {
          "column": 10,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 5,
        },
      },
      "type": "Add a default value to \\"marginTop\\" like: \\"marginTop < default value\\"",
    },
    Object {
      "line": "border 1px solid red",
      "loc": Object {
        "end": Object {
          "column": 19,
          "line": 6,
        },
        "start": Object {
          "column": 0,
          "line": 6,
        },
      },
      "type": "The shorthand border isn't supported. You need to expand it like:
borderWidth 1
borderStyle solid
borderColor red",
    },
    Object {
      "line": "when",
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 8,
        },
        "start": Object {
          "column": 0,
          "line": 8,
        },
      },
      "type": "This when has no condition assigned to it. Add one like: \\"when <isCondition\\"",
    },
    Object {
      "line": "backgroundColor purple",
      "loc": Object {
        "end": Object {
          "column": 21,
          "line": 11,
        },
        "start": Object {
          "column": 0,
          "line": 11,
        },
      },
      "type": "You're missing a base prop for backgroundColor. Add it before all whens on the block.",
    },
    Object {
      "line": "  EmptyWhen Vertical",
      "loc": Object {
        "end": Object {
          "column": 14,
          "line": 12,
        },
        "start": Object {
          "column": 0,
          "line": 2,
        },
      },
      "type": "You have declared a value for color 2 times. Only the last value will be used. You may want to delete the ones you don't use.",
    },
    Object {
      "line": "  EmptyWhen Vertical",
      "loc": Object {
        "end": Object {
          "column": 14,
          "line": 12,
        },
        "start": Object {
          "column": 0,
          "line": 2,
        },
      },
      "type": "You have declared a value for height 2 times. Only the last value will be used. You may want to delete the ones you don't use.",
    },
  ],
}
`;
